# Pathagoras

./: .gitignore  README.md  core.py  main.py  pyproject.toml  requirements.txt  ui_qt.py
src/pathagoras/: main.py  ui_qt.py
tests/: test_core_proceed_data.py  test_core_triangledata.py  test_core_validation.py  test_ui.py
